@@ -2,6 +2,7 @@ Changelog
 =========
 1.4-dev (unreleased)
 --------------------
+* BUG FIX: changed call to getmap service to use another service projection for Europe 'Mercato (WM)', fixes #3634 [demarant]
 
 1.3 - (2010-11-19)
 ------------------
